fix #976